Added extra animations and eye candy

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -36,7 +36,11 @@
 
 .menuBtn {
   display: none;
+  color: white;
+  font-size: 25px;
+  transition: 1s;
 }
+
 @media screen and (max-width: 830px) {
   .navbar {
     flex-direction: column;
