--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -20,19 +20,43 @@
 }
 
 .title {
-  font-size: 72px;
+  font-size: 8vw;
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 70%,
-    rgba(255, 255, 255, 0) 120%
-  );
+  position: relative;
+  color: var(--color-bg);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-stroke: 0.01vw white;
+  white-space: nowrap;
 }
 
+.title::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  color: rgb(93, 207, 241);
+  -webkit-text-stroke: 0.5vw cyan;
+  border-right: 2px solid rgb(93, 207, 241);
+  overflow: hidden;
+  animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    width: 0%;
+  }
+
+  70%,
+  80%,
+  90% {
+    width: 100%;
+  }
+}
 .description {
   font-size: 30px;
   font-family: var(--font-roboto);
@@ -88,9 +112,9 @@
     rgba(25, 55, 109, 0.7) 90%
   );
   animation-name: morph;
-  animation-duration: 6.5s;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-out;
 }
 
 @keyframes morph {
@@ -100,6 +124,14 @@
     /* transform: translate(0, 0px); */
   }
 
+  30% {
+    border-radius: 62% 38% 84% 16% / 33% 69% 31% 67%;
+    background: transparent;
+  }
+  40% {
+    border-radius: 85% 15% 93% 7% / 22% 72% 28% 78%;
+    background: transparent;
+  }
   50% {
     border-radius: 50% 60% 70% 40% /50% 60% 30% 60%;
     background: transparent;
@@ -110,6 +142,24 @@
       rgba(25, 55, 109, 0.7) 90%
     ); */
     /* transform: translate(0, 10px); */
+  }
+
+  60% {
+    border-radius: 55% 45% 75% 25% / 67% 57% 43% 33%;
+    background: transparent;
+  }
+
+  70% {
+    border-radius: 65% 35% 82% 18% / 48% 61% 39% 52%;
+    background: transparent;
+  }
+  80% {
+    border-radius: 75% 25% 89% 11% / 27% 70% 30% 73%;
+    background: transparent;
+  }
+  90% {
+    border-radius: 60% 50% 30% 70% /60% 30% 70% 40%;
+    background: transparent;
   }
 
   100% {
