--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -77,9 +77,9 @@
     flex-direction: column;
   }
 
-  /* .aboutImage {
+  .aboutImage {
     display: none;
-  } */
+  }
 
   .aboutItems {
     margin-top: 29px;
