Added some more fine tuning for responsiveness

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -92,6 +92,9 @@
   font-weight: 500;
 }
 
+.hisImg {
+  display: none;
+}
 .historyItemDetails ul {
   margin-top: 6px;
   list-style-position: inside;
