--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -205,4 +205,12 @@
   .content {
     align-items: center;
   }
+  .heroImg {
+    width: 90%;
+    margin-bottom: 30px;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
 }
