--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -49,7 +49,7 @@
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column;
-    gap: 23px;
+    gap: 25px;
   }
 
   .text {
@@ -60,5 +60,24 @@
 
   .links {
     align-items: center;
+  }
+  .text h2 {
+    font-size: 4rem;
+  }
+
+  .text p {
+    margin-left: -30px;
+    margin-top: 20px;
+  }
+
+  .links {
+    flex-direction: row;
+  }
+  .link {
+    margin-left: 30px;
+  }
+
+  .url {
+    display: none;
   }
 }
