--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -48,6 +48,11 @@
 
 .skillImageContainer img {
   width: 75px;
+  transition: transform 0.7s ease-in-out;
+}
+
+.skillImageContainer img:hover {
+  transform: rotate(360deg);
 }
 
 .skill p {
