--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -31,6 +31,7 @@
 
 .skill {
   display: flex;
+
   flex-direction: column;
   align-items: center;
   gap: 11px;
@@ -46,6 +47,9 @@
   height: 120px;
 }
 
+.skillImageContainer:active {
+}
+
 .skillImageContainer img {
   width: 75px;
   transition: transform 0.7s ease-in-out;
@@ -59,6 +63,12 @@
   font-size: 25px;
   font-family: var(--font-roboto);
   font-weight: 500;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotateZ(360deg);
+  }
 }
 
 .history {
