--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -142,7 +142,7 @@
       #fa88ff,
       #2bd2ff 50%,
       rgba(25, 55, 109, 0.7) 90%
-    ); */
+    ; */
   }
   /* 60% {
     border-radius: 55% 45% 75% 25% / 67% 57% 43% 33%;
